--- a/style.css
+++ b/style.css
@@ -2,6 +2,34 @@ body{
     margin:0;
     padding:0;
 }
+/*nav section*/
+.nav-bar{
+    display: flex;
+    width:100%;
+    margin:10px;
+    padding:5px
+}
+.logo{
+    width:50%;
+    margin:5px;
+    padding-left: 10px;
+}
+
+.menu li{
+    display:inline;
+    padding:20px;
+    
+    list-style-type: none;
+}
+.menu li a{
+    text-decoration: none;
+    color:rgb(119, 76, 11);
+    font-size: 25px;
+    font-weight:300px;
+}
+
+
+
 /*home section*/
 #home{
     display: flex;
@@ -29,6 +57,7 @@ body{
 }
 .half-width span{
     color: rgb(187, 70, 76);
+    font-family: 'Great Vibes', cursive;
 }
 .half-width h1 letter{
     color:rgb(3, 3, 20);
@@ -46,8 +75,9 @@ body{
 
 #about_us{
     display:flex;
-    background-image: url(img/Frame\ 58.jpg);
+    background-image: url(img/Frame\ 58.jpg) ;
     background-position: center ;
+    background-size: auto;
 }
 .contact_button{
     padding: 10px 40px;
@@ -63,6 +93,7 @@ body{
     margin-left: 70px;
     margin-top: 40px;
 }
+
 
 /*Foods Section*/
 
@@ -101,13 +132,37 @@ align-items: center;
     color:rgb(5, 86, 136);
 }
 
-    
-
 .dishes img{
     margin-left: 15px;
     margin-top: 40px;
     border-radius: 10px;
 }
+
+/*map section*/
+
+#google_map{
+    margin:40px
+}
+#google_map h1{
+    text-align: center;
+    color:rgb(128, 76, 129);
+    font-size: 50px;
+}
+
+.mapouter {
+    position: relative;
+    text-align: right;
+    height: 500px;
+    width: 100%;
+}
+
+.gmap_canvas {
+    overflow: hidden;
+    background: none !important;
+    height: 500px;
+    width: 100%;
+}
+
 
 /*footer section*/
 
@@ -120,6 +175,11 @@ align-items: center;
     color: rgb(187, 70, 76);
     text-align: center;
     padding:15px;
+    
+    
+}
+.address h1 span{
+    font-family: 'Great Vibes', cursive;
 }
 .address p{
     text-align: center;
